--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "Axion"
   ],
   "author": "Jordan Travaux",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "web3-eth": "^1.3.1"
+  }
 }
