--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "author": "Jordan Travaux",
   "license": "MIT",
   "dependencies": {
+    "@ethersproject/contracts": "^5.0.8",
+    "@ethersproject/providers": "^5.0.17",
+    "@ethersproject/solidity": "^5.0.7",
+    "@uniswap/sdk": "^3.0.3",
     "web3-eth": "^1.3.1"
   }
 }
